@@ -829,7 +829,6 @@ allprojects {
     }
     tasks.withType(Javadoc) {
         options.addBooleanOption('Xdoclint:none', true)
-	jvmArgs += [ '--enable-preview']
     }
     tasks.withType(Test) {
         maxHeapSize = "1024m"
